@@ -39,4 +39,30 @@ public class Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+using compareTo, OK
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ void bar(String x) {
+  if ( "yes".compareTo( x ) == 0 ) {}
+ }
+}
+     ]]></code>
+    </test-code>
+    <test-code>
+        <description><![CDATA[
+using length, OK
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ void bar(String x) {
+  if (x.length() == "DOCTYPE".length()) {}
+ }
+}
+     ]]></code>
+    </test-code>
 </test-data>
